# Asymmetric-Information-Impact

./: CellDevsInformationImpact.docx  DEVSmodelsForm.docx  README.md  TermProjectReport.docx  build_sim.sh  convert_log_for_viewer.py  run_boundary_seed_scenario.sh  run_strong_cross_community_scenario.sh  run_weak_bridges_scenario.sh  ~$rmProjectReport.docx
Simulation_videos/: base_scenario_simulation.webm  boundary_seed_simulation.webm  strong_cross_community_simulation.webm  weak_bridges_simulation.webm
config/: socialVisualization_config.json  social_config_boundary_seed.json  social_config_strong_cross_community.json  social_config_weak_bridges.json
generators/: generate_asym_config.py  generate_boundary_seed_asym_config.py  generate_strong_cross_community_asym_config.py  generate_weak_bridges_asym_config.py
include/: socialCell.hpp  socialState.hpp
log/: social_log_base_scenario_viewer_log.csv  social_log_boundary_seed_viewer_log.csv  social_log_strong_cross_community_viewer_log.csv  social_log_weak_bridges_viewer_log.csv
main/: CMakeLists.txt  main.cpp
